fix(input): ensure all of label displays on safari (#871)
Closes #795

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -46,7 +46,6 @@ $md-input-underline-disabled-background-image: linear-gradient(to right,
   display: inline-block;
   position: relative;
   font-family: $md-font-family;
-  overflow: hidden;
 
   // To avoid problems with text-align.
   text-align: left;
